started frame conversion integration and added DOP output still need to do plotting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,6 @@ cmake_minimum_required(VERSION 3.16.3)
 
 project(CppNavFilt)
 
-add_library(GpsLocalization
-    src/common.cpp 
-    src/gps_least_squares.cpp
-)
-
 include_directories(
     include
 )
@@ -14,6 +9,7 @@ include_directories(
 add_library(${PROJECT_NAME}
     src/common.cpp
     src/gps_least_squares.cpp
+    src/frame_conversions.cpp
 )
 
 add_executable(SvPvtTest
@@ -25,5 +21,5 @@ target_link_directories(${PROJECT_NAME}
 )
 
 target_link_libraries(SvPvtTest
-    GpsLocalization
+    ${PROJECT_NAME}
 )
