--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,25 @@
 cmake_minimum_required(VERSION 3.16.3)
 
 project(CppNavFilt)
+set(CMAKE_CXX_STANDARD 17)
+
+# CMake Stuff for Sci Plot
+include(FetchContent)
+
+FetchContent_Declare(sciplot_content
+    GIT_REPOSITORY https://github.com/sciplot/sciplot.git
+    GIT_TAG master
+)
+
+FetchContent_GetProperties(sciplot_content)
+
+if(NOT sciplot_content_POPULATED)
+    FetchContent_Populate(sciplot_content)
+endif()
 
 include_directories(
-    include
+    include # cpp nav filt headers
+    ${sciplot_content_SOURCE_DIR}
 )
 
 add_library(${PROJECT_NAME}
