demo ins is WIP...the dynamic data is missing from the class website

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -4,20 +4,20 @@ project(CppNavFiltDemo)
 set(CMAKE_CXX_STANDARD 17)
 
 set(DemoGpsLeastSquares GpsLeastSquares)
-# set(DemoIns InertialNavigationSystem)
+set(DemoIns InertialNavigationSystem)
 
 add_executable(DemoGpsLeastSquares
     gps_least_squares_demo.cpp
 )
 
-# add_executable(DemoIns
-#     ins_demo.cpp
-# )
+add_executable(DemoIns
+    tightly_coupled_ins_demo.cpp
+)
 
 target_link_libraries(DemoGpsLeastSquares PUBLIC
     CppNavFiltSrc
 )
 
-# target_link_libraries(DemoIns PUBLIC
-#     CppNavFiltSrc
-# )
+target_link_libraries(DemoIns PUBLIC
+    CppNavFiltSrc
+)
