--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,10 @@
         "valarray": "cpp",
         "variant": "cpp",
         "codecvt": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "csignal": "cpp",
+        "any": "cpp",
+        "forward_list": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
